--- a/index/Main/CSS/style.css
+++ b/index/Main/CSS/style.css
@@ -271,11 +271,12 @@ h1 {
 
 footer {
     min-width: 300px;
+    position: absolute;
     bottom: 40px;
     display: inline-flex;
-    justify-content: center;
+    /* justify-content: center;
     align-items: flex-start;
-    gap: 16px;
+    gap: 16px; */
 }
 
 #content {
