--- a/index/Main/CSS/boardAddTask.css
+++ b/index/Main/CSS/boardAddTask.css
@@ -71,6 +71,16 @@
 .add-task {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    background-color: #fff;
+    height: 870px;
+    border-radius: 30px;
+    gap: 57px;
+}
+
+.add-task-card {
+    display: flex;
+    flex-direction: column;
     background-color: #fff;
     height: 870px;
     border-radius: 30px;
@@ -97,8 +107,10 @@
 }
 
 .board-task-middle {
+    height: 65vh;
+    overflow-y: auto;
+    overflow-x: hidden;
     display: flex;
-    justify-content: space-between;
     margin-top: 32px;
 }
 
@@ -190,6 +202,7 @@
 }
 
 .input-description {
+    width: 100%;
     display: flex;
     gap: 8px;
     flex-direction: column;
@@ -204,6 +217,7 @@
 }
 
 .input-description textarea {
+    width: 100%;
     display: flex;
     height: 70px;
     padding: 0.75em 1.3em;
@@ -447,15 +461,16 @@
     width: 100%;
 }
 
+
 .create-subtask {
-    position: absolute;
+    width: 100%;
 }
 
 .create-subtask ul {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 26em;
+    /* width: 26em; */
     background-color: #D1D1D1;
     border-radius: 10px;
     padding-left: 1.5em;
@@ -490,11 +505,27 @@
     background-color: #FFF !important;
 }
 
-.fix-container {
+.fix-todo-subtask {
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 27em;
+    padding-right: 0.5em;
+    border-bottom: solid 1px #005DFF;
+    background-color: white;
+}
+
+.fix-todo-subtask img:hover {
+    cursor: pointer;
+    background-color: #D9D9D9;
+    border-radius: 100%;
+}
+
+.fix-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
     padding-right: 0.5em;
     border-bottom: solid 1px #005DFF;
     background-color: white;
@@ -584,6 +615,8 @@
 }
 
 .board-task-footer {
+    width: 100%;
+    margin-bottom: 25px;
     display: flex;
     justify-content: space-between;
     align-items: end;
