--- a/index/Main/CSS/contactsContent.css
+++ b/index/Main/CSS/contactsContent.css
@@ -70,7 +70,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width: 352px;
+    width: 100%;
 }
 
 .contactfield {
@@ -79,6 +79,8 @@
     align-items: center;
     padding: 15px 24px;
     margin-top: 8px;
+    border-radius: 10px;
+    width: 100%;
 }
 
 .contactfield:hover {
@@ -109,8 +111,8 @@
 
 .initials-logo {
     color: white;
-    width: 43px;
-    height: 43px;
+    min-width: 40px;
+    height: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -338,13 +340,6 @@ input::-webkit-inner-spin-button {
 
 .btn-cancel {
     width: 126px !important;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.btn-create {
-    width: 214px !important;
     display: flex;
     justify-content: center;
     align-items: center;
