--- a/index/Main/CSS/responsiveSummery.css
+++ b/index/Main/CSS/responsiveSummery.css
@@ -1,12 +1,6 @@
-@media (max-width: 1420px) {
-    .summery {
-        margin-left: 62px;
-    }
-}
-
 @media (max-width: 1330px) {
     .summery {
-        padding-top: 90px;
+        padding-top: 50px;
         padding-left: 90px;
         padding-right: 90px;
     }
@@ -16,28 +10,35 @@
     .chip1x {
         padding: 1.5em 0.5em 1.5em 0.5em;
     }
+
     .chip2x {
         padding: 1em 0.5em 1em 0.5em;
     }
+
     .chip3x {
         padding: 1.5em 0.5em 1.5em 0.5em;
     }
+
     .chipIcon {
         background-size: 49px 49px;
         width: 49px;
         height: 49px;
     }
+
     .chipIcon2 {
         background-size: 49px 49px;
         width: 49px;
         height: 49px;
     }
+
     .chipData2x h1 {
         font-size: 50px;
     }
+
     .chipData3x h2 {
         font-size: 50px;
     }
+
     .chipData3x p {
         font-size: 16px;
     }
@@ -53,7 +54,21 @@
     .greetingArea {
         display: none;
     }
+
+    .greetingAreaRes {
+        display: flex;
+        gap: 50px;
+    }
+
+    .greetingAreaRes h4 {
+        color: #29ABE2;
+        font-size: 35px;
+        margin-block-start: 0;
+        margin-block-end: 0;
+    }
+
     .greetingAreaRes h3 {
+       
         font-size: 35px;
         margin-block-start: 0;
         margin-block-end: 0;
@@ -64,6 +79,7 @@
     .summeryHeadline h1 {
         font-size: 50px;
     }
+
     .summeryHeadline p {
         font-size: 21px;
     }
@@ -71,19 +87,23 @@
 
 @media (max-width: 880px) {
     .summery {
-        padding-top: 50px;
+        padding-top: 20px;
     }
+
     .summeryHeadline {
         flex-direction: column;
         align-items: center;
     }
+
     .summeryHeadline h1 {
         font-size: 40px;
     }
+
     .summeryHeadline img {
         height: 3px;
         width: 100%;
     }
+
     .chipsArea {
         row-gap: 20px;
     }
@@ -93,6 +113,7 @@
     .summery {
         padding-top: 15px;
     }
+
     .summeryHeadline {
         flex-direction: column;
         justify-content: flex-start;
@@ -100,34 +121,46 @@
         padding-left: 2em;
         padding-top: 2em;
     }
+
     .summeryHeadline img {
         display: none;
     }
+
     .summeryHeadline h1 {
         font-size: 47px;
         margin: 0;
         text-align: left;
     }
+
     .summeryHeadline p {
         font-size: 24px;
         margin: 0;
     }
+
     .chipData1x h2 {
         margin-block-start: 0;
         margin-block-end: 0;
         font-size: 16px;
     }
+
     .chipData1x p {
         font-size: 14px;
     }
+
     .chipData2x h1 {
         font-size: 40px;
     }
+
     .chipData3x h2 {
         font-size: 40px;
     }
+
     .chipData3x p {
         font-size: 12px;
+    }
+
+    .chip1x h1 {
+        font-size: 40px;
     }
 }
 
@@ -135,14 +168,17 @@
     .summery {
         padding-left: 0;
         padding-right: 0;
-        margin-left: 10px;
-        margin-right: 20px;
+        margin: 10px;
+        padding: 10px;
+        overflow-y: hidden;
     }
+
     .summeryHeadline {
         align-items: center;
         padding-left: 0;
         padding-top: 0;
     }
+
     .greetingAreaRes {
         display: none;
     }
@@ -171,53 +207,65 @@
     .summeryHeadline p {
         font-size: 16px;
     }
+
     .summeryHeadline h1 {
         font-size: 35px;
     }
-    .summery {
-        padding-left: 0;
-        padding-right: 0;
-        margin-left: 10px;
-        margin-right: 20px;
-    }
+
+    
+
     .summeryHeadline {
         align-items: start;
         padding-left: 0;
         padding-top: 0;
     }
+
     .greetingAreaRes {
         display: none;
     }
+
     .chip2x {
         margin-left: 0;
         margin-right: 0;
         width: 44%;
     }
+
     .chip1x {
         padding: .8em 0.2em .8em 0.2em;
     }
+
     .chip2x {
         padding: .5em .2em .5em .2em;
     }
+
     .chip3x {
-        padding: .7em 0.1em .7em 0.1em;
+        padding: .7em 0.4em .7em 0.4em;
     }
+
     .chipData2x h1 {
         font-size: 26px;
     }
+
     .chipData3x h2 {
         font-size: 26px;
     }
+
+    .chip1x h1 {
+        font-size: 26px;
+    }
+
     .chipIcon {
         background-size: 30px 30px;
         width: 30px;
         height: 30px;
     }
+
     .chipIcon2 {
         background-size: 30px 30px;
         width: 30px;
         height: 30px;
     }
+
     .chipData2x p {
         font-size: 16px;
     }
@@ -227,18 +275,20 @@
     .summery {
         overflow-y: scroll;
         height: 75vh;
-        margin-left: 2px;
-        margin-right: 2px;
     }
+
     .chipsArea {
         row-gap: 12px;
     }
+
     .chip2x:hover {
         transition: scale 0s ease-in-out;
     }
+
     .chip1x:hover {
         transition: scale 0s ease-in-out;
     }
+
     .chip3x:hover {
         transition: scale 0s ease-in-out;
     }
