--- a/index/Main/CSS/style.css
+++ b/index/Main/CSS/style.css
@@ -1,5 +1,40 @@
+:root {
+    --white: rgba(255, 255, 255, 1);
+    --general-button-inactive: rgba(42, 54, 71, 1);
+    --general-button-hover: rgba(41, 171, 226, 1);
+    --general-button-active: rgba(9, 25, 49, 1);
+    --lightgrey: rgba(246, 247, 248, 1);
+    --placeholder: rgba(209, 209, 209, 1);
+    --lightblue: rgba(41, 171, 226, 1);
+    --white-btn-active: rgba(9, 25, 49, 1);
+    --text-button: rgba(168, 168, 168, 1);
+    --link-color: #29abe2;
+    --dark-blue: rgba(42, 54, 71, 1);
+    --grey: rgba(205, 205, 205, 1);
+}
+
 * {
     font-family: inter, sans-serif !important;
+}
+
+.draggable {
+    transition: transform 0.2s;
+}
+
+.draggable:active {
+    transform: scale(1.05);
+    z-index: 1000;
+}
+
+.pl-arrow {
+    position: absolute;
+    right: 50px;
+    border: none;
+    border-radius: 50%;
+    background-color: var(--lightgrey);
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
 }
 
 .color-userStory {
@@ -21,21 +56,6 @@
 
 .input-error {
     border: 1px solid #FF001F;
-}
-
-:root {
-    --white: rgba(255, 255, 255, 1);
-    --general-button-inactive: rgba(42, 54, 71, 1);
-    --general-button-hover: rgba(41, 171, 226, 1);
-    --general-button-active: rgba(9, 25, 49, 1);
-    --lightgrey: rgba(246, 247, 248, 1);
-    --placeholder: rgba(209, 209, 209, 1);
-    --lightblue: rgba(41, 171, 226, 1);
-    --white-btn-active: rgba(9, 25, 49, 1);
-    --text-button: rgba(168, 168, 168, 1);
-    --link-color: #29abe2;
-    --dark-blue: rgba(42, 54, 71, 1);
-    --grey: rgba(205, 205, 205, 1);
 }
 
 html {
@@ -162,6 +182,10 @@ body {
     margin-top: 24px;
 }
 
+.text-lightblue {
+    color: var(--lightblue);
+}
+
 h1 {
     margin: 0;
     font-size: 61px;
@@ -270,12 +294,12 @@ h1 {
 
 footer {
     min-width: 300px;
-    position: absolute;
     bottom: 40px;
+    position: absolute;
     display: inline-flex;
-    /* justify-content: center;
+    justify-content: center;
     align-items: flex-start;
-    gap: 16px; */
+    gap: 16px;
 }
 
 #content {
@@ -344,6 +368,19 @@ footer {
     transform: translateX(0);
 }
 
+.left-arrow-btn {
+    cursor: pointer;
+    border: none;
+    border-radius: 50%;
+    background-color: var(--lightgrey);
+    width: 50px;
+    height: 50px;
+}
+
+.left-arrow-btn:active {
+    background-color: var(--grey);
+}
+
 
 /* ====================================================== <scrollbalken> =============================================================== */
 
@@ -369,7 +406,16 @@ footer {
     height: 60px;
 }
 
-
+.dragging {
+    opacity: 0.7; 
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5); 
+    transform: scale(1.05); 
+    border: 2px solid #4A90E2; 
+    z-index: 1000; 
+    position: absolute;
+    pointer-events: none;
+    opacity: 0.7;
+}
 /* ====================================================== </scrollbalken> =============================================================== */
 
 .respon-footer,
