--- a/index/Main/CSS/boardAddTask.css
+++ b/index/Main/CSS/boardAddTask.css
@@ -137,7 +137,7 @@
 }
 
 .board-task-input input {
-    display: flex;
+    /* display: flex; */
     align-items: center;
     align-self: stretch;
     border-radius: 10px;
@@ -444,7 +444,7 @@
 
 .board-input-date input {
     border: none;
-    display: flex;
+    /* display: flex; */
     justify-content: space-between;
     align-items: center;
     align-self: stretch;
@@ -470,7 +470,6 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    /* width: 26em; */
     background-color: #D1D1D1;
     border-radius: 10px;
     padding-left: 1.5em;
