fixed date picker

--- a/index/Main/CSS/boardAddTask.css
+++ b/index/Main/CSS/boardAddTask.css
@@ -449,7 +449,7 @@
     align-items: center;
     align-self: stretch;
     background: #FFF;
-    width: 90%;
+    /* width: 90%; */
 }
 
 .board-input-date input[type="date"] {
